samples/_failures_safe/1761419548_803fb5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_17fa1d1e.c: In function ‘print_token’:
./samples/SAFE/__tmp_17fa1d1e.c:168:20: error: expected ‘)’ at end of input
  168 |     if (token->type
      |        ~           ^
      |                    )
./samples/SAFE/__tmp_17fa1d1e.c:168:5: error: expected declaration or statement at end of input
  168 |     if (token->type
      |     ^~
